--- a/travel/package.json
+++ b/travel/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.4.2",
     "vue": "^3.4.15"
   },
   "devDependencies": {
