--- a/travel/frontend/package.json
+++ b/travel/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios": "^1.6.7",
     "vue": "^3.4.15"
   },
   "devDependencies": {
