--- a/travel/frontend/package.json
+++ b/travel/frontend/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.6.7",
-    "vue": "^3.4.15"
+    "sweetalert2": "^11.10.6",
+    "vue": "^3.4.15",
+    "vue-router": "^4.3.0",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.3",
