--- a/travel/Jenkinsfile
+++ b/travel/Jenkinsfile
@@ -3,8 +3,8 @@ pipeline {
 
     environment {
         // It's good practice to keep sensitive or specific data like Docker images, remote hosts, and credentials out of the script for security and flexibility.
-        DOCKER_IMAGE    = 'fern018/fastapi-webhook:latest' // Ensure this Docker image name is correct and accessible.
-        REMOTE_HOST     = 'g64070018@34.87.96.185' // Replace with your actual username and remote IP.
+        DOCKER_IMAGE    = 'manee64070105/fastapi-webhook:latest' // Ensure this Docker image name is correct and accessible.
+        REMOTE_HOST     = 'g64070105@35.240.150.141' // Replace with your actual username and remote IP.
         SSH_CREDENTIALS = 'ssh_prod_instance' // Use the ID of the Jenkins stored SSH credentials.
     }
 
